--- a/WebProjects/Game.Web/home.html
+++ b/WebProjects/Game.Web/home.html
@@ -1109,7 +1109,7 @@
 
                     <!-- 页面内容 -->
                     <div class="page-content" v-else>
-                        <h2>{{ activeTab.title }}</h2>
+                        <!-- <h2>{{ activeTab.title }}</h2>
                         <p>这是 {{ activeTab.title }} 页面内容区域。您可以根据需要在这里添加具体功能。</p>
                         <p>当前页面ID: {{ activeTab.originalId }}</p>
                         <p>页面路径: {{ activeTab.link }}</p>
@@ -1117,7 +1117,12 @@
                         <div style="margin-top: 20px; padding: 15px; background: var(--hover-bg); border-radius: 8px;">
                             <h3 style="margin-bottom: 10px;">页面功能区域</h3>
                             <p>这里可以放置 {{ activeTab.title }} 的具体功能组件和操作界面。</p>
-                        </div>
+                        </div> -->
+                        <iframe v-if="activeTab && activeTab.link"
+                                :src="activeTab.link"
+                                style="width:100%; height:80vh; border:none;"
+                                loading="lazy">
+                        </iframe>
                     </div>
                 </div>
             </div>
